@@ -1,3 +1,8 @@
+2005-11-29  Esteban Sanchez  <esteban@steve-o.org>
+
+	* data/comics.xml: Twelve new comics added. Some updated and some
+	renamed.
+	
 2005-12-01  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* src/buoh-comic.[ch]: Add buoh_comic_image_save for saving an image
